--- a/Source/CompanyCommunicator/ClientApp/src/components/TabContainer/tabContainer.scss
+++ b/Source/CompanyCommunicator/ClientApp/src/components/TabContainer/tabContainer.scss
@@ -56,7 +56,7 @@
                 margin: 0rem auto !important;
 
                 .ac-container {
-                    margin: 0rem auto !important;
+                   // margin: 0rem auto !important;
                 }
             }
         }
@@ -80,7 +80,7 @@
                 margin: 0rem auto !important;
 
                 .ac-container {
-                    margin: 0rem auto !important;
+                   // margin: 0rem auto !important;
                 }
             }
         }
